--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -3,23 +3,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mobile_navigation"
-    app:startDestination="@+id/navigation_home">
+    app:startDestination="@+id/navigation_home_learn_material">
 
     <fragment
-        android:id="@+id/navigation_home"
-        android:name="com.elearningcourse.e_learningapp.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:id="@+id/navigation_home_learn_material"
+        android:name="com.elearningcourse.e_learningapp.ui.learn.LearnFragment"
+        android:label="@string/title_learning_material"
+        tools:layout="@layout/fragment_learn" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
-        android:name="com.elearningcourse.e_learningapp.ui.dashboard.DashboardFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/fragment_dashboard" />
+        android:id="@+id/navigation_questions_answers"
+        android:name="com.elearningcourse.e_learningapp.ui.test.TestFragment"
+        android:label="@string/title_test_material"
+        tools:layout="@layout/fragment_test" />
 
     <fragment
-        android:id="@+id/navigation_notifications"
-        android:name="com.elearningcourse.e_learningapp.ui.notifications.NotificationsFragment"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/fragment_notifications" />
+        android:id="@+id/navigation_stats"
+        android:name="com.elearningcourse.e_learningapp.ui.stats.StatsFragment"
+        android:label="@string/title_stats"
+        tools:layout="@layout/fragment_stats" />
 </navigation>
