--- a/app/src/main/res/layout/first_unit_fragment.xml
+++ b/app/src/main/res/layout/first_unit_fragment.xml
@@ -11,10 +11,23 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
+        <ImageView
+            android:id="@+id/header_image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:contentDescription="@string/nebula_image_desc"
+            android:src="@drawable/james_web_nebula"
+            app:layout_constraintBottom_toTopOf="@id/first_unit_material_text_view"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/first_unit_material_text_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="@dimen/activity_vertical_margin"
             android:text="@string/hello_blank_fragment"
             android:textSize="24sp"
             android:textStyle="italic"
