added bold for text in first_unit_fragment.xml and second_unit_fragment.xml, minor change in ThirdUnitFragment.kt

--- a/app/src/main/res/layout/first_unit_fragment.xml
+++ b/app/src/main/res/layout/first_unit_fragment.xml
@@ -30,7 +30,7 @@
             android:layout_margin="@dimen/activity_vertical_margin"
             android:text="@string/hello_blank_fragment"
             android:textSize="24sp"
-            android:textStyle="italic"
+            android:textStyle="italic|bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
