--- a/app/src/main/res/layout/third_unit_material_item.xml
+++ b/app/src/main/res/layout/third_unit_material_item.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/image_view_placeholder"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    </ImageView>
+    </androidx.appcompat.widget.AppCompatImageView>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/text_view_description_placeholder"
