--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,8 @@
     <color name="light_blue_A200">#FF40C4FF</color>
     <color name="light_blue_A400">#FF00B0FF</color>
     <color name="black_overlay">#66000000</color>
+    <color name="colorAccent">#FF006E</color>
+    <color name="colorPrimary">#3C0072</color>
+    <color name="colorPrimaryDark">#300B51</color>
+    <color name="colorBackground">#FFC4DD</color>
 </resources>
